Added compiled html

--- a/index.mjml
+++ b/index.mjml
@@ -65,7 +65,7 @@
         <mj-column vertical-align="middle">
         </mj-column>
         <mj-column vertical-align="middle">
-          <mj-image href="https://www.pottermore.com/" padding-left="0px" width="36px" align="center" alt="Apollo Logo" src="https://via.placeholder.com/36/38808F/FCE6BF?Text=Digital.com" />
+          <mj-image href="https://www.pottermore.com/" padding-left="0px" width="36px" align="center" alt="" src="https://images.prod.meredith.com/product/93b9372a19db417690e5f78bad139157/1524175832314/l/harry-potter-gryffindor-crest-12-square-die-cut-wall-art-multi" />
         </mj-column>
         <mj-column vertical-align="middle">
           <mj-text align="right" font-size="12px" padding-right="0px">
