--- a/index.mjml
+++ b/index.mjml
@@ -66,7 +66,7 @@
         <mj-column vertical-align="middle">
         </mj-column>
         <mj-column vertical-align="middle">
-          <mj-image href="https://www.pottermore.com/" padding-left="0px" width="36px" align="center" alt="" src="https://images.prod.meredith.com/product/93b9372a19db417690e5f78bad139157/1524175832314/l/harry-potter-gryffindor-crest-12-square-die-cut-wall-art-multi" />
+          <mj-image href="https://www.pottermore.com/" padding-left="0px" width="75px" align="center" alt="" src="./assets/hogwarts-seal.png" />
         </mj-column>
         <mj-column vertical-align="middle">
           <mj-text align="right" font-size="12px" padding-right="0px">
@@ -81,7 +81,7 @@
       <!-- Start Hero -->
       <mj-section padding-top="0px">
         <mj-column width="600px">
-          <mj-image alt="Header" padding="0" src="https://cdn.dribbble.com/users/963528/screenshots/2652131/hogwarts.png" />
+          <mj-image alt="Header" padding="0" src="./assets/hogwarts-castle.png" />
         </mj-column>
       </mj-section>
       <!-- End Hero -->
