--- a/index.mjml
+++ b/index.mjml
@@ -232,17 +232,7 @@
           <mj-text align="left" padding-bottom="15px">
             <strong style="color:#000; font-weight: 600;">What’s your favorite thing about Hogwarts?</strong>
             <br />
-            Quidditch 
-          </mj-text>
-          <mj-text align="left" padding-bottom="15px">
-            <strong style="color:#000; font-weight: 600;">Do you have a pet peeve?</strong>
-            <br />
-            Lemon drops tiramisu donut apple pie marshmallow carrot cake cotton candy fruitcake cupcake. Liquorice dessert apple pie topping chocolate. Tiramisu chocolate soufflé wafer.
-          </mj-text>
-          <mj-text align="left" padding-bottom="15px">
-            <strong style="color:#000; font-weight: 600;">What’s your favorite class?</strong>
-            <br />
-            
+            Quidditch. 
           </mj-text>
           <mj-text align="left" padding-bottom="15px">
             <strong style="color:#000; font-weight: 600;">Tell me a fun fact about you.</strong>
