--- a/index.mjml
+++ b/index.mjml
@@ -101,7 +101,7 @@
             &mdash;Nitwit
           </mj-text>
           <mj-text mj-class="text--kudos">
-            “It does not do to dwell on dreams and forget to <span style="color:#505354; font-weight: bold;">live</span>”
+            “It does not do to dwell on dreams and forget to <span style="color:#505354; font-weight: bold;">live</span>.”
           </mj-text>
           <mj-text mj-class="text--kudos-signature">
             &mdash;Blubber
@@ -119,7 +119,7 @@
             &mdash;Tweak!
           </mj-text>
           <mj-text mj-class="text--kudos">
-            “My father will hear of this”
+            “My father will hear of this.”
           </mj-text>
           <mj-text mj-class="text--kudos-signature">
             &mdash;Draco Malfoy
